folder structure changed

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular2-starter",
   "version": "0.2.0",
   "description": "A boiler-plate setup for Angular 2 applications",
-  "license": "MIT",
+  "license": "",
   "keywords": [
     "angular2",
     "typescript"
