--- a/package.json
+++ b/package.json
@@ -1,112 +1,144 @@
 {
-  "name": "angular2-starter",
-  "version": "0.2.0",
-  "description": "A boiler-plate setup for Angular 2 applications",
-  "license": "",
+  "name": "angular2-webpack-starter",
+  "version": "5.1.1",
+  "description": "An Angular 2 Webpack Starter kit featuring Angular 2 (Router, Http, Forms, Services, Tests, E2E, Coverage), Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack by AngularClass",
   "keywords": [
     "angular2",
+    "webpack",
     "typescript"
   ],
-  "engines": {
-    "node": ">=6"
-  },
+  "author": "Varun",
+  "homepage": "https://github.com/kvarun18/angular-2-examples.git",
+  "license": "CAP",
   "scripts": {
-    "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production webpack",
-    "clean": "rimraf dist/",
-    "cover": "istanbul report text text-summary",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot --progress --no-info",
-    "lint": "npm run lint-ts && npm run lint-js && npm run lint-css",
-    "lint-ts": "tslint './src/**/*.ts'",
-    "lint-js": "eslint '**/*.js' --ignore-path .gitignore",
-    "lint-css": "stylelint './src/**/*.css'",
-    "postinstall": "npm run build",
-    "start": "cross-env NODE_ENV=production http-server ./dist",
-    "pretest": "rimraf coverage/ & npm run lint",
-    "test": "karma start --singleRun true",
-    "posttest": "npm run cover",
-    "test:watch": "karma start --singleRun false"
+    "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
+    "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
+    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
+    "build": "npm run build:dev",
+    "ci": "npm run lint && npm test && npm run e2e",
+    "clean:dist": "npm run rimraf -- dist",
+    "clean:install": "npm set progress=false && npm install",
+    "clean:start": "npm start",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
+    "docker": "docker",
+    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
+    "e2e:live": "npm run e2e -- --elementExplorer",
+    "e2e": "npm run protractor",
+    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
+    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
+    "github-deploy": "npm run github-deploy:dev",
+    "lint": "npm run tslint \"src/**/*.ts\"",
+    "postversion": "git push && git push --tags",
+    "prebuild:dev": "npm run clean:dist",
+    "prebuild:prod": "npm run clean:dist",
+    "preclean:install": "npm run clean",
+    "preclean:start": "npm run clean",
+    "pree2e": "npm run webdriver:update -- --standalone",
+    "preversion": "npm test",
+    "protractor": "protractor",
+    "rimraf": "rimraf",
+    "server:dev:hmr": "npm run server:dev -- --inline --hot",
+    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
+    "server:prod": "http-server dist --cors",
+    "server": "npm run server:dev",
+    "start:hmr": "npm run server:dev:hmr",
+    "start": "npm run server:dev",
+    "test": "karma start",
+    "tslint": "tslint",
+    "typedoc": "typedoc",
+    "version": "npm run build",
+    "watch:dev:hmr": "npm run watch:dev -- --hot",
+    "watch:dev": "npm run build:dev -- --watch",
+    "watch:prod": "npm run build:prod -- --watch",
+    "watch:test": "npm run test -- --auto-watch --no-single-run",
+    "watch": "npm run watch:dev",
+    "webdriver-manager": "webdriver-manager",
+    "webdriver:start": "npm run webdriver-manager start",
+    "webdriver:update": "npm run webdriver-manager update",
+    "webpack-dev-server": "webpack-dev-server",
+    "webpack": "webpack"
+  },
+  "dependencies": {
+    "@angular/common": "2.1.1",
+    "@angular/compiler": "2.1.1",
+    "@angular/core": "2.1.1",
+    "@angular/forms": "^2.1.1",
+    "@angular/http": "2.1.1",
+    "@angular/platform-browser": "2.1.1",
+    "@angular/platform-browser-dynamic": "2.1.1",
+    "@angular/platform-server": "2.1.1",
+    "@angular/router": "3.1.1",
+    "@angularclass/conventions-loader": "^1.0.2",
+    "@angularclass/hmr": "~1.2.0",
+    "@angularclass/hmr-loader": "~3.0.2",
+    "assets-webpack-plugin": "^3.4.0",
+    "core-js": "^2.4.1",
+    "http-server": "^0.9.0",
+    "ie-shim": "^0.1.0",
+    "rxjs": "^5.0.0-rc.1",
+    "zone.js": "~0.6.17"
+  },
+  "devDependencies": {
+    "@types/hammerjs": "^2.0.33",
+    "@types/jasmine": "^2.2.34",
+    "@types/node": "^6.0.38",
+    "@types/protractor": "^1.5.20",
+    "@types/selenium-webdriver": "2.44.29",
+    "@types/source-map": "^0.1.27",
+    "@types/uglify-js": "^2.0.27",
+    "@types/webpack": "^1.12.34",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^2.2.1",
+    "codelyzer": "~1.0.0-beta.2",
+    "copy-webpack-plugin": "^4.0.0",
+    "css-loader": "^0.25.0",
+    "exports-loader": "^0.6.3",
+    "expose-loader": "^0.7.1",
+    "file-loader": "^0.9.0",
+    "gh-pages": "^0.11.0",
+    "html-webpack-plugin": "^2.21.0",
+    "imports-loader": "^0.6.5",
+    "istanbul-instrumenter-loader": "^1.0.0",
+    "json-loader": "^0.5.4",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-remap-coverage": "^0.1.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "1.8.0",
+    "parse5": "^2.2.2",
+    "protractor": "^4.0.9",
+    "raw-loader": "0.5.1",
+    "rimraf": "^2.5.2",
+    "script-ext-html-webpack-plugin": "^1.3.2",
+    "source-map-loader": "^0.1.5",
+    "string-replace-loader": "1.0.5",
+    "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.4",
+    "ts-helpers": "1.1.2",
+    "ts-node": "^1.3.0",
+    "tslint": "^4.0.0-dev.0",
+    "tslint-loader": "^2.1.3",
+    "typedoc": "^0.5.0",
+    "typescript": "^2.0.6",
+    "url-loader": "^0.5.7",
+    "webpack": "2.1.0-beta.25",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^2.1.0-beta.9",
+    "webpack-md5-hash": "^0.0.5",
+    "webpack-merge": "^0.15.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/kvarun18/angular-2-examples.git"
   },
   "bugs": {
-    "url": ""
+    "url": " "
   },
-  "dependencies": {
-    "http-server": "^0.9.0"
-  },
-  "devDependencies": {
-    "@angular/common": "^2.1.0",
-    "@angular/compiler": "^2.1.0",
-    "@angular/core": "^2.1.0",
-    "@angular/forms": "^2.1.0",
-    "@angular/http": "^2.1.0",
-    "@angular/platform-browser": "^2.1.0",
-    "@angular/platform-browser-dynamic": "^2.1.0",
-    "@angular/router": "^3.1.0",
-    "@types/jasmine": "^2.5.35",
-    "@types/node": "^6.0.45",
-    "angular2-template-loader": "^0.5.0",
-    "autoprefixer": "^6.5.1",
-    "awesome-typescript-loader": "^2.2.4",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "basscss": "^8.0.2",
-    "basscss-addons": "^1.0.0",
-    "basscss-basic": "^1.0.0",
-    "classlist-polyfill": "^1.0.3",
-    "codelyzer": "^1.0.0-beta.2",
-    "console-polyfill": "^0.2.3",
-    "copy-webpack-plugin": "^3.0.1",
-    "core-js": "^2.4.1",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.25.0",
-    "cssnano": "^3.7.7",
-    "es7-reflect-metadata": "^1.6.0",
-    "eslint": "^3.8.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "html5-history-api": "^4.2.7",
-    "immutable": "^3.8.1",
-    "inline-source-map": "^0.6.2",
-    "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "0.2.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-coverage": "^0.1.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-sourcemap-writer": "^0.1.2",
-    "karma-spec-reporter": "^0.0.26",
-    "karma-webpack": "^1.8.0",
-    "postcss-cssnext": "^2.8.0",
-    "postcss-import": "8.0.2",
-    "postcss-loader": "^1.0.0",
-    "raf": "^3.3.0",
-    "ramda": "^0.22.1",
-    "raw-loader": "^0.5.1",
-    "reflect-metadata": "^0.1.8",
-    "rimraf": "^2.5.4",
-    "rxjs": "5.0.0-beta.12",
-    "selenium-standalone": "^5.7.2",
-    "style-loader": "^0.13.1",
-    "stylelint": "^7.5.0",
-    "stylelint-webpack-plugin": "^0.4.0",
-    "to-string-loader": "^1.1.5",
-    "ts-helpers": "^1.1.2",
-    "tslint": "^3.15.1",
-    "tslint-loader": "^2.1.5",
-    "typescript": "^2.0.3",
-    "webpack": "2.1.0-beta.25",
-    "webpack-dev-server": "2.1.0-beta.9",
-    "webpack-hot-middleware": "^2.13.0",
-    "zone.js": "^0.6.26"
+  "engines": {
+    "node": ">= 4.2.1",
+    "npm": ">= 3"
   }
 }
